# quant

./: README.md  requirements.txt  schema.sql
quant/: .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  NOTICE_THIRD_PARTY.md  README.md  distribution_manifest.json  mypy.ini  pyproject.toml  release_profile.txt  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
quant/.github/workflows/: ci.yml
quant/a_share_quant/: __init__.py  __main__.py  cli.py  cli_backtest.py  cli_data.py  cli_operator.py  cli_report.py  cli_research.py  cli_runtime.py  schema.sql
quant/a_share_quant/adapters/: __init__.py
quant/a_share_quant/app/: __init__.py  assembly_broker.py  assembly_core.py  assembly_registry.py  assembly_services.py  assembly_steps.py  bootstrap.py  context.py  distribution_profile_contract.py  main.py  plugin_loader.py  runtime_assembly.py  runtime_lane.py
quant/a_share_quant/config/: __init__.py  loader.py  models.py
quant/a_share_quant/contracts/: __init__.py  versioned_contracts.py
quant/a_share_quant/core/: __init__.py  audit_actions.py  broker_acceptance.py  broker_acceptance_suite.py  broker_client_loader.py  component_registry.py  events.py  exceptions.py  logging_utils.py  metrics.py  path_utils.py  runtime_checks.py  schema_loader.py  timeout_utils.py  utils.py  valuation.py
quant/a_share_quant/demo/: __init__.py  operator_demo_broker.py
quant/a_share_quant/domain/: models.py
quant/a_share_quant/engines/: __init__.py  backtest_engine.py  backtest_runtime.py  execution_engine.py  execution_registry.py  portfolio_engine.py  risk_engine.py
quant/a_share_quant/execution/: __init__.py  order_lifecycle_service.py  shared_contract_service.py
quant/a_share_quant/plugins/: __init__.py  analyser_plugin.py  base.py  broker_plugin.py  dataset_plugin.py  plugin_manager.py  risk_plugin.py  scheduler_plugin.py
quant/a_share_quant/providers/: __init__.py  bar_provider.py  calendar_provider.py  dataset_provider.py  feature_provider.py  instrument_provider.py
quant/a_share_quant/repositories/: __init__.py  account_repository.py  audit_repository.py  backtest_run_repository.py  data_import_repository.py  dataset_version_repository.py  execution_session_repository.py  market_repository.py  order_repository.py  research_cache_repository.py  research_run_repository.py  runtime_event_repository.py  strategy_repository.py
quant/a_share_quant/resources/: __init__.py  config_manifest.py  config_sync.py
quant/a_share_quant/ui/: __init__.py  (+1 more)
quant/configs/: app.yaml  backtest.yaml  data.yaml  operator_paper_trade_demo.yaml
quant/docs/: architecture.md  operator_manual.md  strategy_spec.md
quant/sample_data/: daily_bars.csv
quant/scripts/: __init__.py  benchmark_runtime.py  build_clean_release.py  check_runtime.py  daily_run.py  generate_report.py  init_db.py  launch_ui.py  operator_reconcile_session.py  operator_run_supervisor.py  operator_snapshot.py  operator_submit_order.py  operator_submit_signal.py  operator_sync_session.py  research.py  sync_market_data.py  sync_release_metadata.py  verify_release.py
quant/tests/: __init__.py  conftest.py
(+224 files in other folders)
